--- a/.gitignore
+++ b/.gitignore
@@ -22,8 +22,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-
-#Python
+# Vscode
+.vscode
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
