--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "bootstrap-daterangepicker": "^3.1.0",
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-bootstrap-daterangepicker": "^7.0.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "recharts": "^2.0.9",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
