--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.0.2",
     "bootstrap-daterangepicker": "^3.1.0",
+    "dom-to-image": "^2.6.0",
+    "file-saver": "^2.0.5",
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
@@ -18,6 +20,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "recharts": "^2.0.9",
+    "recharts-to-png": "^1.1.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
