--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^1.6.1",
     "react-bootstrap-daterangepicker": "^7.0.0",
     "react-dom": "^17.0.2",
+    "react-resizable": "^3.0.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "recharts": "^2.0.9",
