remove unnecessary comments, update readme, esdocs

--- a/package.json
+++ b/package.json
@@ -51,6 +51,9 @@
   },
   "proxy": "http://localhost:5000",
   "devDependencies": {
+    "esdoc": "^1.1.0",
+    "esdoc-jsx-plugin": "^1.0.0",
+    "esdoc-standard-plugin": "^1.0.0",
     "eslint-plugin-react-hooks": "^4.2.0"
   }
 }
