--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "react-bootstrap": "^1.6.1",
     "react-bootstrap-daterangepicker": "^7.0.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
+    "react-pro-sidebar": "^0.6.0",
     "react-resizable": "^3.0.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.1",
     "recharts": "^2.0.9",
     "recharts-to-png": "^1.1.0",
     "web-vitals": "^1.0.1"
