Add Toast system

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
-    "bootstrap": "^5.0.2",
+    "bootstrap": "^4.6.1",
     "bootstrap-daterangepicker": "^3.1.0",
     "dom-to-image": "^2.6.0",
     "file-saver": "^2.0.5",
@@ -27,6 +27,7 @@
     "react-select": "^4.3.1",
     "recharts": "^2.0.9",
     "recharts-to-png": "^1.1.0",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
