--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ur-optics-solar-dashboard",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/optics/solar/monitoring-station/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
